--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.card-zoom:hover .card-zoom-image {
+    @apply scale-150;
+  }
+  .card-zoom:hover .card-zoom-text {
+    @apply scale-100;
+  }
