--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,500;1,300;1,400;1,500&display=swap');
+
 
 .card-zoom {
   @apply relative flex items-center justify-center m-3 overflow-hidden shadow-xl w-60 h-60 rounded-2xl;
@@ -18,7 +20,6 @@
   @apply scale-100;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,300;0,400;0,500;1,300;1,400;1,500&display=swap');
 
 :root{
     --pink:#FFC0CB;
@@ -49,7 +50,7 @@ html{
 
 }
 body{
-    background:linear-gradient(rgba(40,40,80),var(--violet));
+    background:linear-gradient(rgba(40,40,80),var(--violet),rgba(40,40,80),rgba(40,40,80));
 }
 header{
     width: 96%;
@@ -72,6 +73,7 @@ header{
     width: 100%;
     border-radius: 0;
     box-shadow: 0 0.1rem 0.3rem rgba(0,0,0,0.2);
+
 }
 header .navbar ul{
     display: flex;
@@ -93,7 +95,7 @@ header .navbar ul li a{
 
 header .navbar ul li a:hover,
 header .navbar ul li a.active{
-    color: #000;
+    color:#8A2BE2;
 }
 
 
@@ -252,4 +254,15 @@ footer .social a{
         padding:0 0.5rem;
         margin-bottom: 2rem;
     }
+}
+
+
+
+/* tech.html */
+
+.technology{
+    width:100%;
+    padding : 3rem 0 0 0;
+    align-items:center;
+    justify-content:center;
 }
